[package]
name = "jd-network"
version = "0.1.0"
authors = ["uru"]
edition = "2018"
description = "Tiny E2EE network crate"
repository = "https://github.com/2vg/jd-network"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring-compat = "0.1.1"
chacha20poly1305 = "0.7.1"
x25519-dalek = "1.1.0"
anyhow = "1.0.38"
thiserror = "1.0.24"
rand_core = { version = "0.5" }
